force-app/main/default/objects/Volunteer_Activity__c/Volunteer_Activity__c.object-meta.xml
<CustomObject>
    <customHelpPage>HelpActivity</customHelpPage>
    <description>Keeps track of volunteer activities and allows employees to sign up to participate in volunteer activities.</description>
    <label>Volunteer Activity</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>