force-app/main/default/objects/Volunteer_Activity__c/fields/Activity_Date_Intranet__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date_Intranet__c</fullName>
    <description>Date of activity for Intranet site.  (Here so users who enter will not have to enter both date and time.  Will be converted to Date_and_time__c in Volunteer site backend apex class.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter date of Activity</inlineHelpText>
    <label>Activity Date</label>
    <type>Date</type>
</CustomField>