force-app/main/default/objects/Volunteer_Activity__c/fields/Activity_Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>Activity_Focus_Area__c</fullName>
    <label>Activity Focus Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vibrant Neighborhoods and Stable Housing – Housing development and homeownership organizations</fullName>
            </value>
            <value>
                <fullName>Educated workforce – K to 12 and nonprofit organizations</fullName>
            </value>
            <value>
                <fullName>Educated workforce – Colleges and Universities</fullName>
            </value>
            <value>
                <fullName>Strong local economies – Chambers of Commerce and Economic Development organizations</fullName>
            </value>
            <value>
                <fullName>Good health – Health care and Social Service organizations</fullName>
            </value>
            <value>
                <fullName>Access to culture – Arts, Culture and Humanities organizations</fullName>
            </value>
            <value>
                <fullName>Athletics – Sports organizations</fullName>
            </value>
            <value>
                <fullName>Sustained environment – Environmental  Sustainability and Conservation organizations</fullName>
            </value>
            <value>
                <fullName>Community cohesion – Animal, Civic, Political, Disaster, Faith - Based, Scouts, Rotaries, and Service League organizations</fullName>
            </value>
            <value>
                <fullName>Community cohesion - United way</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>