force-app/main/default/objects/Volunteer_Activity__c/fields/Activity_Link__c.field-meta.xml
<CustomField>
    <fullName>Activity_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Activity Link</label>
    <type>Url</type>
</CustomField>