force-app/main/default/objects/Volunteer_Activity__c/fields/Activity_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Activity_Record_Type_ID__c</fullName>
    <formula>RecordTypeId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Record Type ID</label>
    <type>Text</type>
</CustomField>