force-app/main/default/objects/Volunteer_Activity__c/fields/Activity_Year__c.field-meta.xml
<CustomField>
    <fullName>Activity_Year__c</fullName>
    <description>Year of Activity.  Will be used in conjunction with Volunteer Board Activity child record, which will have the full date on it.</description>
    <label>Activity Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>