force-app/main/default/objects/Volunteer_Activity__c/fields/Activity_Year_Formula__c.field-meta.xml
<CustomField>
    <fullName>Activity_Year_Formula__c</fullName>
    <formula>text(Year(DateValue(Date_and_Time__c + 0.25)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Year</label>
    <type>Text</type>
</CustomField>