force-app/main/default/objects/Volunteer_Activity__c/fields/Assisted_with_Fundraising__c.field-meta.xml
<CustomField>
    <fullName>Assisted_with_Fundraising__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Activity should align with FNBO job duties or area of expertise. Example: Director of Marketing assists with design and distribution strategy of flier for annual banquet.</inlineHelpText>
    <label>Assisted with Fundraising</label>
    <type>Checkbox</type>
</CustomField>