force-app/main/default/objects/Volunteer_Activity__c/fields/Board_Service_Details__c.field-meta.xml
<CustomField>
    <fullName>Board_Service_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please provide additional details about service with the organization. This could include position on BOD, specific details around service performed, or how service aligns with area of expertise.</inlineHelpText>
    <label>Board Service Details</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>