force-app/main/default/objects/Volunteer_Activity__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The city in which the activity occurs</description>
    <encryptionScheme>None</encryptionScheme>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>