force-app/main/default/objects/Volunteer_Activity__c/fields/Contributed_Accounting_or_Bookkeeping__c.field-meta.xml
<CustomField>
    <fullName>Contributed_Accounting_or_Bookkeeping__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Activity should align with FNBO job duties or area of expertise. Example: Finance Analyst helped compile annual budget.</inlineHelpText>
    <label>Contributed Accounting or Bookkeeping</label>
    <type>Checkbox</type>
</CustomField>