force-app/main/default/objects/Volunteer_Activity__c/fields/CRA_Assessment_Area__c.field-meta.xml
<CustomField>
    <fullName>CRA_Assessment_Area__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CRA Assessment Area</label>
    <type>TextArea</type>
</CustomField>