force-app/main/default/objects/Volunteer_Activity__c/fields/CRA_Qualified__c.field-meta.xml
<CustomField>
    <fullName>CRA_Qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if your activity meets the qualifications for CRA credit for the organization.</inlineHelpText>
    <label>CRA Qualified?</label>
    <type>Checkbox</type>
</CustomField>