force-app/main/default/objects/Volunteer_Activity__c/fields/CRA_Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>CRA_Review_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CRA Review Comments</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>