force-app/main/default/objects/Volunteer_Activity__c/fields/Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>