force-app/main/default/objects/Volunteer_Activity__c/fields/Date_Time_formula__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_formula__c</fullName>
    <formula>LEFT(TEXT(Date_and_Time__c ), 16)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Date &amp; Time</label>
    <type>Text</type>
</CustomField>