force-app/main/default/objects/Volunteer_Activity__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <defaultValue>&quot;&lt;provide a brief description here&gt;&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Activity Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>