force-app/main/default/objects/Volunteer_Activity__c/fields/Duration_hours__c.field-meta.xml
<CustomField>
    <fullName>Duration_hours__c</fullName>
    <label>Duration (hours)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>