force-app/main/default/objects/Volunteer_Activity__c/fields/Employee_Board_Membership__c.field-meta.xml
<CustomField>
    <fullName>Employee_Board_Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Connect to your Board Membership record, if your activity is related to your Board Service</inlineHelpText>
    <label>Employee Board Membership</label>
    <referenceTo>Employee_Board_Membership__c</referenceTo>
    <relationshipLabel>Volunteer Activities</relationshipLabel>
    <relationshipName>Volunteer_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>