force-app/main/default/objects/Volunteer_Activity__c/fields/Employee_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Employee_Business_Unit__c</fullName>
    <label>Employee Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bankcard</fullName>
            </value>
            <value>
                <fullName>CBG - CO Market</fullName>
            </value>
            <value>
                <fullName>CBG - Corporate Treasury Services</fullName>
            </value>
            <value>
                <fullName>CBG - F @ Work</fullName>
            </value>
            <value>
                <fullName>CBG - Global Services</fullName>
            </value>
            <value>
                <fullName>CBG - IL Market</fullName>
            </value>
            <value>
                <fullName>CBG - KS Market</fullName>
            </value>
            <value>
                <fullName>CBG - Omaha - Ag/CoBank/Renew</fullName>
            </value>
            <value>
                <fullName>CBG - Omaha - Commercial Lending</fullName>
            </value>
            <value>
                <fullName>CBG - Omaha - Corporate Lending</fullName>
            </value>
            <value>
                <fullName>CBG - Omaha - CRE</fullName>
            </value>
            <value>
                <fullName>FNTS</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Wealth and Investments - Branch-Based Advisers</fullName>
            </value>
            <value>
                <fullName>Wealth and Investments - Capital Markets</fullName>
            </value>
            <value>
                <fullName>Wealth Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>