force-app/main/default/objects/Volunteer_Activity__c/fields/Employee_Email_Intranet__c.field-meta.xml
<CustomField>
    <fullName>Employee_Email_Intranet__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Type the email address of the employee who volunteered</inlineHelpText>
    <label>Employee Email</label>
    <type>Email</type>
</CustomField>