force-app/main/default/objects/Volunteer_Activity__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <description>Employee&#39;s user login.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>