force-app/main/default/objects/Volunteer_Activity__c/fields/Employee_Market__c.field-meta.xml
<CustomField>
    <fullName>Employee_Market__c</fullName>
    <label>Employee Market</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Colorado</fullName>
            </value>
            <value>
                <fullName>Illinois</fullName>
            </value>
            <value>
                <fullName>Kansas</fullName>
            </value>
            <value>
                <fullName>Lincoln</fullName>
            </value>
            <value>
                <fullName>Texas</fullName>
            </value>
            <value>
                <fullName>Omaha</fullName>
            </value>
            <value>
                <fullName>South Dakota</fullName>
            </value>
            <value>
                <fullName>Columbus</fullName>
            </value>
            <value>
                <fullName>Fremont</fullName>
            </value>
            <value>
                <fullName>Kearney</fullName>
            </value>
            <value>
                <fullName>North Platte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>