force-app/main/default/objects/Volunteer_Activity__c/fields/Employee_Name_Intranet__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name_Intranet__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Type the name of the employee who volunteered</inlineHelpText>
    <label>Employee Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>