force-app/main/default/objects/Volunteer_Activity__c/fields/Event_Summary__c.field-meta.xml
<CustomField>
    <fullName>Event_Summary__c</fullName>
    <defaultValue>&quot;&lt;provide complete activity details here&gt;&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Activity Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>