force-app/main/default/objects/Volunteer_Activity__c/fields/Great_for__c.field-meta.xml
<CustomField>
    <fullName>Great_for__c</fullName>
    <label>Great for</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kids</fullName>
            </value>
            <value>
                <fullName>Teens</fullName>
            </value>
            <value>
                <fullName>Groups</fullName>
            </value>
            <value>
                <fullName>Seniors 55+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>