force-app/main/default/objects/Volunteer_Activity__c/fields/IsOpportunity__c.field-meta.xml
<CustomField>
    <fullName>IsOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A volunteer activity which is not associated with a specific date or time (e.g., Big Brother/Big Sister mentoring).</inlineHelpText>
    <label>Ongoing Opportunity</label>
    <type>Checkbox</type>
</CustomField>