force-app/main/default/objects/Volunteer_Activity__c/fields/Map_It__c.field-meta.xml
<CustomField>
    <fullName>Map_It__c</fullName>
    <formula>HYPERLINK(&quot;http://maps.google.com/maps?q=&quot; &amp; Street__c &amp; &quot; &quot; &amp; City__c &amp; &quot; &quot; &amp; Zip_Postal_Code__c, &quot;Click to Map&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Get Directions</label>
    <type>Text</type>
</CustomField>