force-app/main/default/objects/Volunteer_Activity__c/fields/Max_Number_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>Max_Number_of_Participants__c</fullName>
    <inlineHelpText>Blocks users from signing up if the activity is already full.</inlineHelpText>
    <label>Maximum Participants</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>