force-app/main/default/objects/Volunteer_Activity__c/fields/Not_Listed__c.field-meta.xml
<CustomField>
    <fullName>Not_Listed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For the new Volunteer Tracking website.  Need to know if an organization is listed or not.</description>
    <label>Not Listed?</label>
    <type>Checkbox</type>
</CustomField>