force-app/main/default/objects/Volunteer_Activity__c/fields/Notify_Participants__c.field-meta.xml
<CustomField>
    <fullName>Notify_Participants__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls the code that notifies participants when volunteer activity details change.  If this field is checked, then the code will send an email notification to all participants with the new volunteer activity details.</description>
    <inlineHelpText>Sends an email notification to all participants whenever this activity is changed.</inlineHelpText>
    <label>Notify Participants</label>
    <type>Checkbox</type>
</CustomField>