force-app/main/default/objects/Volunteer_Activity__c/fields/Number_of_FNB_Employees_Involved__c.field-meta.xml
<CustomField>
    <fullName>Number_of_FNB_Employees_Involved__c</fullName>
    <label>Number of FNB Employees Involved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>