force-app/main/default/objects/Volunteer_Activity__c/fields/Organization_Other__c.field-meta.xml
<CustomField>
    <fullName>Organization_Other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Fill this in if your organization does not exist in our list.  Please be sure to blank out the Volunteer Organization name if you use this, however.</inlineHelpText>
    <label>Organization Other</label>
    <length>120</length>
    <type>Text</type>
</CustomField>