force-app/main/default/objects/Volunteer_Activity__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Primary Contact for this Volunteer Activity</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Organization_Contact__c</referenceTo>
    <relationshipName>R00N30000002VytCEAS</relationshipName>
    <type>Lookup</type>
</CustomField>