force-app/main/default/objects/Volunteer_Activity__c/fields/Provided_Technical_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Provided_Technical_Assistance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Activity should align with FNBO job duties or area of expertise. Example: Chief Credit Officer assists with development of lending policy.</inlineHelpText>
    <label>Provided Technical Assistance</label>
    <type>Checkbox</type>
</CustomField>