force-app/main/default/objects/Volunteer_Activity__c/fields/Provided_Workforce_Dev_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Provided_Workforce_Dev_Assistance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Activity should align with FNBO job duties or area of expertise. Example: Credit Analyst instructs entrepreneur workshop.</inlineHelpText>
    <label>Provided Workforce Dev Assistance</label>
    <type>Checkbox</type>
</CustomField>