force-app/main/default/objects/Volunteer_Activity__c/fields/Served_on_a_Sub_Committee__c.field-meta.xml
<CustomField>
    <fullName>Served_on_a_Sub_Committee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please select Committee from list or provide details in the ‘Service Details’ text box.</inlineHelpText>
    <label>Served on a Sub-Committee</label>
    <type>Checkbox</type>
</CustomField>