force-app/main/default/objects/Volunteer_Activity__c/fields/Served_on_Board_of_Directors__c.field-meta.xml
<CustomField>
    <fullName>Served_on_Board_of_Directors__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Examples of Board of Director positions include: Chair, Vice-Chair, Treasurer, Secretary, or General Member.</inlineHelpText>
    <label>Served on Board of Directors</label>
    <type>Checkbox</type>
</CustomField>