force-app/main/default/objects/Volunteer_Activity__c/fields/Service_Not_Listed__c.field-meta.xml
<CustomField>
    <fullName>Service_Not_Listed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Box to be checked on Board Reporting if the person&#39;s Activity is not listed on the rest of the Board.</description>
    <inlineHelpText>If service type is not listed, please provide details in the ‘Service Details’ text box.</inlineHelpText>
    <label>Service Not Listed</label>
    <type>Checkbox</type>
</CustomField>