force-app/main/default/objects/Volunteer_Activity__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>